# jopka_kirill

./: app.py  battery_storage.py  car_new.py  car_new_soc.py  components.py  config_setup.py  controller_2_ems.py  controller_ems.py  cosim_framework.py  ev_battery_state.py  ev_request.py  grid.py  load_reading.py  price_market.py  pyproject.toml  run_simulation.py  solar_panel.py  tab_components.py  wind_plant.py  windatlas_100.csv  windatlas_20.csv
configurations/: config1.yaml  controller_add_config.yaml  controller_config.yaml  ev_config.yaml  load_config.yaml  port_data.yaml  solar_config.yaml  turbine_config.yaml
data/: 485979_51.45_5.50_2019.xlsx  EnergyPriceManyDays.xlsx  LoadManyDays.xlsx  data_cars.csv  data_sun.xlsx  grid_topology.csv  port_capacity_car.csv  port_capacity_car.xlsx
